--- a/webrtc-Tony.conf
+++ b/webrtc-Tony.conf
@@ -3,9 +3,12 @@ dir = ./record/
 
 [frame]
 width=1920
-    high =    1080 # 高度
+high =    1080 # 高度
 
 rate = 15 ;每秒帧率
 
 [断联时间]
 disconnect=15 #断联15s后提示
+
+[log]
+log=./server.log
