--- a/webrtc-Tony.conf
+++ b/webrtc-Tony.conf
@@ -1,5 +1,5 @@
 [root_dir]
-dir = ./record/
+dir = /home/TonyYang/record/
 
 [frame]
 width=1920
@@ -11,4 +11,4 @@ rate = 15 ;每秒帧率
 disconnect=15 #断联15s后提示
 
 [log]
-log=./server.log
+log=/home/TonyYang/ExtraHW/server.log
